# pino

./: .gitignore  .gitmodules  Cargo.toml  PROJECT_STRUCTURE.md  README.md  framework_design.md  implementation_roadmap.md
.github/workflows/: ci.yml
benchmarks/: README.md
crates/pino-cli/: Cargo.toml
crates/pino-cli/src/: config.rs  lib.rs  main.rs  utils.rs
crates/pino-cli/src/commands/: analyze.rs  build.rs  deploy.rs  dev.rs  generate.rs  migrate.rs  mod.rs  new.rs  test.rs
crates/pino-core/: Cargo.toml  README.md
crates/pino-core/src/: account.rs  collections.rs  context.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  memory.rs  prelude.rs  program.rs  utils.rs
crates/pino-macros/: Cargo.toml
crates/pino-macros/src/: entrypoint.rs  lib.rs
crates/pino-runtime/: Cargo.toml  README.md
crates/pino-runtime/src/: lib.rs
crates/pino-runtime/src/allocator/: bump.rs  mod.rs  pool.rs  region.rs  stack.rs
crates/pino-runtime/src/context/: mod.rs  program.rs
crates/pino-runtime/src/profiler/: cu_tracker.rs  mod.rs
docs/book/: book.toml
docs/book/src/: SUMMARY.md  introduction.md
examples/hello-world/: Cargo.toml
examples/hello-world/src/: lib.rs
tests/: README.md
tools/scripts/: setup.sh
