[package]
name = "pino-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for the Pino Solana framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/torrey-xyz/pino"
keywords = ["solana", "blockchain", "cli", "development-tools"]
categories = ["development-tools", "blockchain", "command-line-utilities"]

[[bin]]
name = "pino"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive", "color"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File system operations
fs_extra = "1.3"
tempfile = "3.8"

# Template engine
handlebars = "4.5"

# Terminal UI
console = "0.15"
indicatif = "0.17"
colored = "2.0"

# Core Pino dependencies
pino-core = { path = "../pino-core" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempdir = "0.3"

[features]
default = [] 