[package]
name = "pino-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for the Pino Solana framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/torrey-xyz/pino"
keywords = ["solana", "blockchain", "macros", "procedural"]
categories = ["development-tools", "blockchain"]

[lib]
proc-macro = true

[dependencies]
# Procedural macro dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

# For parsing and code generation
darling = "0.20"

[features]
default = [] 